--- a/day-length-hs.cabal
+++ b/day-length-hs.cabal
@@ -19,6 +19,6 @@ executable day-length-hs
   main-is:             Main.hs
   -- other-modules:       
   -- other-extensions:    
-  build-depends:       base >=4.8 && <4.9, time >=1.5 && <1.6, optparse-applicative >=0.12 && <0.13
+  build-depends:       base >=4.8, time >=1.5, optparse-applicative >=0.12
   hs-source-dirs:      src
   default-language:    Haskell2010
